--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   dio: ^4.0.6
   shared_preferences: ^2.0.16
   get_it: ^7.2.0
+  retrofit: ^3.3.1
+  build_runner: ^2.3.3
+  retrofit_generator: ^4.2.0
+  json_annotation: ^4.7.0
+  json_serializable: ^6.5.4
 
 dev_dependencies:
   flutter_test:
