--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,27 +101,27 @@ flutter:
     # list giving the asset and other descriptors for the font. For
     # example:
   fonts:
-    - family: Source Code Pro
+    - family: Inter
       fonts:
-        - asset: assets/fonts/SourceCodePro-Black.ttf
+        - asset: assets/fonts/Inter-Black.ttf
           weight: 900
-        - asset: assets/fonts/SourceCodePro-ExtraBold.ttf
+        - asset: assets/fonts/Inter-ExtraBold.ttf
           weight: 800
-        - asset: assets/fonts/SourceCodePro-Bold.ttf
+        - asset: assets/fonts/Inter-Bold.ttf
           weight: 700
-        - asset: assets/fonts/SourceCodePro-SemiBold.ttf
+        - asset: assets/fonts/Inter-SemiBold.ttf
           weight: 600
-        - asset: assets/fonts/SourceCodePro-Medium.ttf
+        - asset: assets/fonts/Inter-Medium.ttf
           weight: 500
-        - asset: assets/fonts/SourceCodePro-Regular.ttf
-          weight: 400
-        - asset: assets/fonts/SourceCodePro-Italic.ttf
+        - asset: assets/fonts/Inter-Regular.ttf
           weight: 400
           style: italic
-        - asset: assets/fonts/SourceCodePro-Light.ttf
+        - asset: assets/fonts/Inter-Light.ttf
           weight: 300
-        - asset: assets/fonts/SourceCodePro-ExtraLight.ttf
+        - asset: assets/fonts/Inter-ExtraLight.ttf
           weight: 200
+        - asset: assets/fonts/Inter-Thin.ttf
+          weight: 100
 
     - family: Bebas Neue
       fonts:
