--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   lottie: ^2.2.0
   firebase_core: ^2.4.1
   cloud_firestore: ^4.3.1
+  event_bus: ^2.0.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
