--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -28,5 +28,23 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+			<key>NSAllowsArbitraryLoads</key>
+			<true/>
+	</dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+			<key>NSExceptionDomains</key>
+			<dict>
+					<key>pips.da.gov.ph</key>
+					<dict>
+							<key>NSExceptionAllowsInsecureHTTPLoads</key>
+							<true/>
+							<key>NSIncludesSubdomains</key>
+							<true/>
+					</dict>
+			</dict>
+	</dict>
 </dict>
 </plist>
