--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,12 @@ dependencies:
   cloud_firestore: ^4.3.1
   event_bus: ^2.0.0
   provider: ^6.0.5
+  pusher_client: ^2.0.0
+  socket_io_client: ^2.0.1
+  flutter_laravel_echo: ^0.3.0
+  laravel_echo: ^0.2.9
+  pusher_channels_flutter: ^2.1.0
+  dart_pusher_channels: ^1.0.0+6
 
 dev_dependencies:
   flutter_test:
