--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   event_bus: ^2.0.0
   provider: ^6.0.5
   dart_pusher_channels: ^1.0.0+6
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
