--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -22,29 +22,31 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>localhost:8000</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+			<key>pips.da.gov.ph</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+		</dict>
+	</dict>
 	<key>NSHumanReadableCopyright</key>
 	<string>$(PRODUCT_COPYRIGHT)</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-			<key>NSAllowsArbitraryLoads</key>
-			<true/>
-	</dict>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-			<key>NSExceptionDomains</key>
-			<dict>
-					<key>pips.da.gov.ph</key>
-					<dict>
-							<key>NSExceptionAllowsInsecureHTTPLoads</key>
-							<true/>
-							<key>NSIncludesSubdomains</key>
-							<true/>
-					</dict>
-			</dict>
-	</dict>
 </dict>
 </plist>
