--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,15 +60,13 @@ dependencies:
   pretty_dio_logger: ^1.2.0-beta-1
   flutter_slidable: ^2.0.0
   lottie: ^2.2.0
-  firebase_core: ^2.4.1
-  cloud_firestore: ^4.3.1
   event_bus: ^2.0.0
   provider: ^6.0.5
   dart_pusher_channels: ^1.0.0+6
   intl: ^0.18.0
-  flutter_inappwebview: ^6.0.0-beta.11
   url_launcher: ^6.1.8
   flutter_macos_webview: ^0.0.6
+  universal_io: ^2.0.4
 
 dev_dependencies:
   flutter_test:
