added uis for notifications

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ dependencies:
   url_launcher: ^6.1.8
   flutter_macos_webview: ^0.0.6
   universal_io: ^2.0.4
+  flutter_dropzone: ^3.0.5
+  forme_file_picker: ^3.0.2+1
 
 dev_dependencies:
   flutter_test:
