--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   firebase_messaging: ^14.2.2
   firebase_core: ^2.5.0
   printing: ^5.9.3
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   flutter_test:
