--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   firebase_core: ^2.5.0
   printing: ^5.9.3
   google_fonts: ^4.0.3
+  file_picker: ^5.2.5
 
 dev_dependencies:
   flutter_test:
