--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,9 @@ dependencies:
   printing: ^5.9.3
   google_fonts: ^4.0.3
   file_picker: ^5.2.5
+  adaptive_components: ^0.0.9
+  auto_route_generator: ^5.0.3
+  auto_route: ^5.0.4
 
 dev_dependencies:
   flutter_test:
