--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_svg: ^1.1.6
-  dio: ^4.0.6
+  flutter_svg: ^2.0.2
+  dio: ^5.0.1
   shared_preferences: ^2.0.16
   get_it: ^7.2.0
-  retrofit: ^3.3.1
+  retrofit: ^4.0.1
   build_runner: ^2.3.3
-  retrofit_generator: ^4.2.0
+  retrofit_generator: ^5.0.0
   json_annotation: ^4.7.0
   json_serializable: ^6.5.4
   freezed: ^2.3.2
@@ -51,7 +51,7 @@ dependencies:
     git:
       url: https://github.com/google/flutter-desktop-embedding.git
       path: plugins/window_size
-  flutter_launcher_icons: ^0.11.0
+  flutter_launcher_icons: ^0.12.0
   csv: ^5.0.1
   path_provider: ^2.0.11
   uuid: ^3.0.7
@@ -76,6 +76,9 @@ dependencies:
   adaptive_components: ^0.0.9
   auto_route_generator: ^5.0.3
   auto_route: ^5.0.4
+  universal_platform: ^1.0.0+1
+  material_color_utilities: ^0.2.0
+  dynamic_color: ^1.6.2
 
 dev_dependencies:
   flutter_test:
