--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ dependencies:
   dynamic_color: ^1.6.2
   desktop_webview_window: ^0.2.0
   skeletons: ^0.0.3
+  clipboard: ^0.1.3
 
 dev_dependencies:
   flutter_test:
