--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ dependencies:
   desktop_webview_window: ^0.2.0
   skeletons: ^0.0.3
   clipboard: ^0.1.3
+  flex_color_scheme: ^6.1.2
 
 dev_dependencies:
   flutter_test:
