--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+21
 
 environment:
   sdk: ">=2.18.6 <3.0.0"
@@ -83,6 +83,7 @@ dependencies:
   skeletons: ^0.0.3
   clipboard: ^0.1.3
   flex_color_scheme: ^6.1.2
+  flip_card: ^0.7.0
 
 dev_dependencies:
   flutter_test:
