--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,7 @@ dependencies:
   flutter_dropzone: ^3.0.5
   forme_file_picker: ^3.0.2+1
   firebase_messaging: ^14.2.2
-  firebase_core: ^2.5.0
+  firebase_core: ^2.7.1
   printing: ^5.9.3
   google_fonts: ^4.0.3
   file_picker: ^5.2.5
@@ -80,10 +80,16 @@ dependencies:
   material_color_utilities: ^0.2.0
   dynamic_color: ^1.6.2
   desktop_webview_window: ^0.2.0
-  skeletons: ^0.0.3
   clipboard: ^0.1.3
   flex_color_scheme: ^6.1.2
   flip_card: ^0.7.0
+  image_picker: ^0.8.6+4
+  http_parser: ^4.0.2
+  skeleton_loader: ^2.0.0+4
+  webview_flutter: ^4.0.6
+  flutter_inappwebview: ^5.7.2+3
+  skeletons: ^0.0.3
+  share_plus: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -111,8 +117,11 @@ flutter:
   assets:
     - assets/images/logo.svg
     - assets/images/sdgs/
+    - assets/images/
     - assets/data/
     - assets/json/
+    - assets/ca/
+    - assets/isrg_x1.pem
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware
