--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+21
+version: 1.0.0+1
 
 environment:
   sdk: ">=2.18.6 <3.0.0"
@@ -90,6 +90,7 @@ dependencies:
   flutter_inappwebview: ^5.7.2+3
   skeletons: ^0.0.3
   share_plus: ^6.3.1
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
