--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,7 @@ dependencies:
   provider: ^6.0.5
   dart_pusher_channels: ^1.0.0+6
   intl: ^0.18.0
-  url_launcher: ^6.1.8
+  url_launcher: ^6.1.10
   flutter_macos_webview: ^0.0.6
   universal_io: ^2.0.4
   flutter_dropzone: ^3.0.5
@@ -92,6 +92,9 @@ dependencies:
   http: ^0.13.5
   easy_pdf_viewer: ^1.0.6
   rxdart: ^0.27.7
+  onesignal_flutter: ^3.5.1
+  rive: ^0.10.3
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
@@ -122,6 +125,7 @@ flutter:
     - assets/images/
     - assets/data/
     - assets/json/
+    - assets/rive/
     - assets/ca/
     - assets/isrg_x1.pem
 
