--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,6 +92,7 @@ dependencies:
   rive: ^0.10.3
   dartz: ^0.10.1
   local_auth: ^2.1.6
+  multiselect: ^0.0.4
 
 dev_dependencies:
   flutter_test:
