--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,7 +77,7 @@ dependencies:
   dynamic_color: ^1.6.2
   desktop_webview_window: ^0.2.0
   clipboard: ^0.1.3
-  flex_color_scheme: ^6.1.2
+  flex_color_scheme: ^7.0.0-dev.3
   flip_card: ^0.7.0
   image_picker: ^0.8.6+4
   http_parser: ^4.0.2
