--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,12 @@ dependencies:
   local_auth: ^2.1.6
   multiselect: ^0.0.4
   mobile_web_view: ^0.1.2
+  bootstrap_breakpoints: ^0.0.1-dev.2
+  bootstrap_icons: ^1.10.2
+  device_preview: ^0.1.4-beta
+  riverpod: ^2.3.5
+  flutter_riverpod: ^2.3.5
+  riverpod_annotation: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -106,6 +112,9 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   msix: ^3.8.2
+  custom_lint: ^0.3.2
+  riverpod_lint: ^1.1.6
+  riverpod_generator: ^2.1.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
